# red-log

./: README.md  demo.py  ex_config.json  logfactory.py  logging_config.py  logging_config_ex.json  mkdocs.yml  pyproject.toml  test.py  test2.py  test3.py  test_factories.py  test_mod.py
requirements/: requirements.dev.txt
sandbox/: __init__.py  _log.py  classes.py  demo.py  logfactory.py  logging_config_ex.json  main.py
src.bak/red_log/class_handlers/: __init__.py  _handlers.py
src.bak/red_log/configs/: __init__.py
src.bak/red_log/formatters/: __init__.py  _formatters.py  validators.py
src.bak/red_log/handlers/: _enums.py  _handlers.py  validators.py
src.bak/red_log/utils/: _methods.py
src/red_log/: __init__.py  __methods.py  constants.py
src/red_log/base/: __init__.py  _bases.py
src/red_log/class_handlers/: _handlers.py
src/red_log/config_classes/: __init__.py
src/red_log/config_classes/filters/: _filters.py
src/red_log/config_classes/prefab/: __init__.py
src/red_log/config_dicts/: __init__.py  _configs.py
src/red_log/configs/: __init__.py  _configs.py
src/red_log/core/: __init__.py  constants.py
src/red_log/filters/: __init__.py  _filters.py
src/red_log/fmts/: __init__.py  _formats.py
src/red_log/formatters/: __init__.py  _factory.py  _formatters.py
src/red_log/handlers/: __init__.py  _factory.py  _handlers.py  _types.py  validators.py
src/red_log/helpers/: __methods.py
src/red_log/loggers/: __init__.py  _factory.py  _loggers.py
src/red_log/utils/: __init__.py  _methods.py
src/red_log/validators/: __init__.py  _validators.py
(+7 files in other folders)
